# how-to-stock

./: .dockerignore  Dockerfile  Dockerfile.dev  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  start-docker.sh  start-local.sh  start.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  django.yml  docker-image.yml
stockhelper/: manage.py  utils_test.py
stockhelper/stockapp/: admin.py  api.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
stockhelper/stockapp/fixtures/: cards.json
stockhelper/stockapp/migrations/: 0001_initial.py  0002_auto_20210307_2023.py  0002_auto_20210318_1422.py  0002_auto_20210919_2236.py  0003_auto_20210924_2106.py  0003_stock_shares.py  0004_auto_20210924_2131.py
stockhelper/stockapp/templatetags/: custom_tags.py
stockhelper/stockapp/tests/: test_balance_view.py  test_create_account_view.py  test_delete_account_view.py  test_detail_view.py  test_flashcards_view.py  test_home_view.py  test_portfolio_view.py  test_price_view.py  test_screener_view.py  utils.py
stockhelper/stockhelper/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
stockhelper/stockhelper/tests/: test_create_account_view.py  test_delete_account_view.py
stockhelper/templates/registration/: create.html  delete.html  logged_out.html  login.html  logout.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  show_password.html
(+22 files in other folders)
