[project]
name = "how-to-stock"
version = "0.1.0"
description = "A web app that can teach users how the stock market works, trade virtual stocks, and view predictions of stocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["django>=5.2.8", "requests>=2.32.5"]

[dependency-groups]
dev = ["autopep8>=2.3.2", "python-dotenv>=1.2.1"]
prod = [
    "dj-database-url>=3.0.1",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.13",
    "psycopg-binary>=3.2.13",
    "whitenoise>=6.11.0",
]
